--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
@@ -26,6 +26,8 @@ View <a href="document.pdf">document</a></p>
 <li><a href="RecursiveSet.html">RecursiveSet</a></li>
 
 <li><a href="RecursiveVDMMap.html">RecursiveVDMMap</a></li>
+
+<li><a href="RecursiveVDM.html">RecursiveVDM</a></li>
 </ul>
 </div>
 </body>
