--- a/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
+++ b/plugins/vdm2isa/src/main/resources/HTML/Unsorted/VDM-Examples/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><link rel="stylesheet" type="text/css" href="isabelle.css"/>
-<title>Session VDM-Examples (Isabelle2021: February 2021)</title>
+<title>Session VDM-Examples (Isabelle2021-1)</title>
 </head>
 
 
@@ -20,12 +20,6 @@ View <a href="document.pdf">document</a></p>
 
 <ul>
 <li><a href="VDMToolkit.html">VDMToolkit</a></li>
-
-<li><a href="RecursiveVDMNat.html">RecursiveVDMNat</a></li>
-
-<li><a href="RecursiveSet.html">RecursiveSet</a></li>
-
-<li><a href="RecursiveVDMMap.html">RecursiveVDMMap</a></li>
 
 <li><a href="RecursiveVDM.html">RecursiveVDM</a></li>
 </ul>
